Update readme and renumber chapters

--- a/books/ära-kasva-suureks/01.ee.md
+++ b/books/ära-kasva-suureks/01.ee.md
@@ -1,23 +1,17 @@
-## TÄISKASVANUD ELAVAD KÕIKJAL, LAPSED AINULT HETKES
+## Eessõna
 
-Ma avaldan sulle ühe väga tähtsa saladuse, mida enamik täiskasvanuid ei mõista: elu leiab aset ainult praeguses hetkes. Minevik on juba olnud ja tulevik pole veel kohal. Täiskasvanud kipuvad elama kas minevikus toimunud sündmustele mõeldes või tulevikku planeerides. Sellisel viisil aga sa ei saa kunagi nautida hetke ja elada täiel rinnal. Kui sa ei ela täiel rinnal, siis sa ei saa olla kuigi õnnelik ega edukas.
+Mis eristab õnnelikke inimesi õnnetutest? Mis vahe on inimestel, kes täidavad mängleva kergusega oma unistused ning nendel, kes ei täida oma unistusi kunagi? Kaks inimest vivad külg külje kõrval teha täpselt samu asju, ometigi on üks neist õnnelik ja teine mitte. Üks neist viib oma unistused ellu ja teine ei küündi oma unistuste täitmisele isegi ligilähedale mitte. Kusjuures see, kes on õnnelik ja edukas ei pruugi olla targem, haritum, parema välimusega ega muul viisil teisest millegipoolest parem. Vastus on, et õnnelike ja õnnetute inimeste erinevus on ainult nende SUHTUMISES.
 
-Lapsed seevastu elavad ainult käesolevas hetkes. Nemad ei planeeri pidevalt tulevikku ega analüüsi minevikus toimunut. Tundub, justkui täiskasvanud oleksid vahetanud elu elamise selle analüüsimise vastu. Nii võibki juhtuda, et sel ajal kui täiskasvanud plaane teevad, läheb samal hetkel elu nendest mööda.
+Me kõik oleme enda elus tundnud, et mõnikord suhtume asjadesse paremini. Vahel kulgeme justkui sõiduvees. Meid kannab eriline hoog, mille abil kõik, mis ette võtame, laabub ladusalt. Su tuju on hea, oled avatud, loominguline, lustlik, lõbus ja samas terane. Sa tunned, et oled praeguses hetkes täielikult kohal, võtad elust täiel rinnal osa.
 
-Samuti nagu minevikus kaevamine on ka tuleviku ennustamine tänamatu ja asjatu. Sa ei oska ealeski ette näha elu keerdkäike ja enda tulevikku ette planeerida. Elu mitmekesisus ja ettearvamatus lõhub alati sinu tehtud plaanid. Lapsed oskavad hetkes elada. Nad mängivad ennastunustavalt ja keskenduvad ainult siin ja praegu toimuvale.
+Teinekord ümbritseks meid justkui mingi negatiivse suhtumise pilv - kõik veab viltu, oleme justkui häälestanud end valele lainele. Me kipume lihtsaid asju liialt keeruliseks mõtlema, tuju on halb, oleme vaenulikult meelestatud ning pessimistlikud. Me ei suuda täie kohaloluga hetke nautida, oleme kuidagi hajevil ja häiritud.
 
-Ka sina peaksid seda lastelt õppima ja elama ainult käesolevas hetkes. Kujuta ette last, kes mängib oma mänguasjadega. Ta ei lase ennast segada. Ta tegutseb ennastunustavalt. Ta ei tunne süüd luhtunud varasemate mängude pärast. Samuti ei püüa ta ennustada, mida ta homme või ülehomme mängib. Ta keskendub jäägitult ainult praeguse hetke mängule. Täpselt samamoodi teevad täiskasvanud inimesed, kes on oma alal edukad. Iga eduka inimese saladus on jäägitu pühendumine oma tegevusele just praeguses hetkes. Ainult nii on võimalik lahendada meie ees seisvaid ülesandeid kvaliteetselt.
+Sellest, kuidas jõuda nii-öelda õigele lainele, kus me kogeme õnnetunnet ja liigume oma unistuste täitmise suunas, rägivad pajud enesemotiveermise raamatud. Miks siis oli vaja kirjutada veel üks raamat? Sellepärast, et minu arvates räägivad paljud õnneliku-eluraamatud väga õiget juttu, kuid enamus neist ajavad lihtsa asja liiga keeruliseks - olles mõne sellise läbi lugenud, võime loetuga küll nõus olla, kuid oleme veel suuremas segaduses, kui enne raamatu kätte võtmist. 
 
-Tihti võib tegevusetus olla sinu parim valik. Täiskasvanud üritavad teha kõike korraga, kiiresti ja efektiivselt. Kui täiskasvanu joob hommikukohvi, siis sõidab ta mõttes juba autoga tööle. Kui ta on autosse istunud, motleb ta aga juba enda lõunapausi sisustamisele. Selliselt tormates me ei märka õigeid lahendusi, mida on võimalik näha ainult hetkes elades, samas jättes endale aega ka tegevusetult olemiseks.
+Hea nõuanne või teooria on alati lühike, mitte pikk, sest pikast ja laialivalguvast teooriast ei jää meile see kõige tähtsam ja põhilisem sõnum meelde. Käesolev raamat annab sulle vaid kolmesõnalise soovituse, kuidas olla õnnelik: "Ära kasva suureks". Raamat selgitab selle mõtte igakülgselt lahti, et sa mõistaksid täielikult seda lihtsat ja meeldejäävat sõnumit. Iga peatükk arutleb ühe konkreetse lapseliku ja täiskasvanuliku suhtumise erinevuse üle ning peatükkide lõpus on lugu maailma ajalugu muutnud inimesest, kes kõik on kasutanud lapselikku suhtumist, näiteks Robert De Niro, Abraham Lincoln, Leonardo da Vinci, Oprah, John Lennon ja Steve Jobs.
 
-Kui sa veedad aega ka täiesti mitte midagi tehes, siis lülitad sa enda aju justkui autopiloodilt välja ja su mõte saab hakata taas efektiivsemalt tööle. Näed enda probleeme uuest vaatenurgast, su loovus avaneb ja leiad täiesti uudseid lahendusi, mida sa varem ei märganud, kuna kiirustasid.
+Olen kogu oma teadliku elu uurinud erinevusi õnnelike ja onnetute inimeste vahel. Ma kinnitan sulle absoluutse veendumusega, et suhtumine on ainus, mis meid õnnelikuks või õnnetuks teeb. Ning see on ainult hea, sest see tähendab, et meie endi võimuses on tõsta oma õnnetset ja elu kvaliteeti. Kõik õnnelikud inimesed kasutavad kas alateadlikult või teadlikult lapselikku suhtumist.
 
-Ühelt lapseliku suhtumisega edukalt ettevõtjalt küsiti kord, mida ta soovitaks teda praegu kuulavatele noortele, kes soovivad saada sama edukaks, kui tema seda on. Või mida ta soovitaks vanematele inimestele, kes sooviksid hakata ettevõtjaks. Edukas ettevõtja mõtles sekundi ja ütles, et tal on ainult üks soovitus: "Hakka kohe pihta!" Ajakirjanik küsis veel täpsustavaid küsimusi, et kuidas ikkagi erinevate projektide jaoks ettevalmistusi teha, mida õppida või kuhu pöörduda, kuid ettevõtja jäi endale kindlaks ja ütles uuesti vastuseks täpselt sama lause: "Hakka lihtsalt kohe praegu pihta!" Ta selgitas, et liigne targutamine, uurimine, ettevalmistamine ja muu viib fookuse põhiasjalt kõrvale ja ei lase keskenduda alustamisele.
+Siin raamatus on 40 näidet kõikvoimalike erinevate eluvaldkondade mailmakuulsatest inimestest, kes on oma unistused ellu viinud just tänu lapselikule suhtumisele. Seepärast on täiesti kindel, et selline suhtumine saab ka sinul aidata enda unistused ellu viia, ükskõik mis erialal või millised need unistused on! Loodetavasti saad sa raamatut lugedes põneva elamuse ning naudid edaspidi enda elu varasemast (veelgi) rohkem.
 
-Kõige tähtsam on lihtsalt võtta kätte ja alustada, kuna maailm on täis suurepäraseid, kuid realiseerumata plaane ja häid kavatsusi. Ma saan tema nõuandest suurepäraselt aru! Iga teekonna kõige raskem hetk on alati esimene samm ehk alustamine.
-
-Täiskasvanud lükkavad pidevalt oma plaane tulevikku, kuid seda õiget hetke ei tulegi kunagi. Sa pead lihtsalt elama hetkes nagu laps, ja olema julge, kartmatu nagu laps ning hakkama kohe pihta! Planeerimine, kaalutlemine, mõtlemine - need kõik on väga täiskasvanulikud ja arukad tegevused, kuid need on tõelise tegevuse vastandid. Kui sa hakkad kohe pihta, alustad otsast, siis sa jõuad teel olles niikuinii piisavalt planeerida, kaalutleda ja mõelda. Plaane teha jõuad sa alati, aga kohe pihta hakkamise hetke ei tohi sa mööda lasta!
-
-Sa ei pea teadma, kus su tee lõppeb, vaid ainult seda, kus see algab. Mine lihtsalt edasi ja kui sa jõuad kohale, siis näed sa järgmisi võimalusi edasiminekuks. Teekonda alustamata ei saa sa kunagi teada, kuhu sa oleksid välja jõudnud.
-
-Iga inimene, kes on oma alal edukas, pühendub oma tegevusele jäägitult just käesolevas hetkes, täpselt nagu laps keskendub oma tegevusele ainult praeguses hetkes.
+Head lugemist!
