--- a/books/ära-kasva-suureks/02.ee.md
+++ b/books/ära-kasva-suureks/02.ee.md
@@ -1,26 +1,21 @@
-## LUGU LAPSELIKULT HETKES ELAMISEST
-## Rihanna
+## Sissejuhatus
 
-Miljonid väikesed tüdrukud üle kogu maailma unistavad saada maailmakuulsaks superstaariks. Teinekord on jällegi vanemad need, kes proovivad oma last sellele kuldsele teele suunata. Palgatakse kallis koduõpetaja, laps pannakse õppima soliidse ajalooga muusikakooli, saadetakse tantsutundidesse ja peetakse talle motiveerivaid loenguid.
+Nõuanne "Ara kasva suureks" ei tähenda, et sa peaksid käituma nagu laps: trampima jalgu, jonnima ja päev otsa mängima. Ei. See soovitus hõlmab ainult sinu vaimset hoiakut, ellusuhtumist. Sest sinu suhtumine ja hoiak on põhilised, mis kujundavad sinu elu ja määravad selle, kas sa saad olla õnnelik ja täita oma unistused, või mitte.
 
-Rihanna näide on teistsugune. Ta sündis 1988. aastal Kariibi mere väikesel imekaunil saarel Barbadosel. Robyn Rihanna oli pere kolmest lapsest vanim. Ta isa töõtas laohoidjana ja ema raamatupidajana. Huvitaval kombel sai ta lapsepõlves kätte ettevõtluse õppetunnid, mida tal läks vaja tulevases karmis muusikaäris. Nimelt aitas ta oma isal tänavaturul riideid müüa. See andis talle kindlasti teadmisi müügist ja sellest, kuidas turg toimib.
+Täiskasvanutel on palju sellist, mida lastel veel pole. Täiskasvanud on kogenumad, targemad, haritumad, nende võimed on igas mõttes suuremad. Lapsed alles arenevad selles suunas. Kuid hoolimata sellest, et täiskasvanud on lastest niivõrd palju võimekamad, ei pruugi nad olla õnnelikumad, kui seda on lapsed.
 
-Ettevõtliku loomuga Robyn leiutas veel ühe viisi, kuidas taskuraha suurendada. Ta ostis kaalukomme, pakendas need kenadesse pakenditesse ning müüs siis koolis teistele lastele kasumiga maha. Robyn Rihanna lapsepõlve mõjutas tugevalt ka tema isa alkoholi- ja umastisõltuvus ning vanemate tüliderohke abielu, mis lõppes, kui Rihanna oli 14-aastane.
+Ka üks ja sama inimene ei pruugi olla täiskasvanuna õnnelikum, kui ta oli seda lapsena. Muidugi ta võib olla täiskasvanuna õnnelikum, kuid samas võib ta olla ka palju palju vähem oma eluga rahul. See tundub paradoksaalne, et täiskasvanud, kes on niivõrd täiuslikud ja ülimuslikud võrreldes lastega, ei suuda ometigi õnnelikud olla. See peaks olema meiesugustele tarkadele ja arenenutele ju lapsemäng. Aga ei ole.
 
-Rihannale meeldis kodus endamisi laulda juba väga väikesest peale. See on Barbadose kultuuri arvestades ka üsna tavapärane. Ta oli endassetõmbunud laps ning muusika oli tema väljendusviis. Ta laulis kogu aeg - oma sugulastele, kaisukarudele, isegi patjadele - ning unistas, et ühel päeval saab ta staariks.
+See, mis segab meid elu nautimast ja oma täiusliku potentsiaali poole pürgimast, on just seesama täiskasvanulik tarkus, teadmised ja elukogemused. Kõik see, mis on täiskasvanutel lastest parem, töötab meie endi vastu. Meie mõistuspärane suhtumine ei lase meil elu nautida ja oma unistuste täitmise poole kogu hingest püüelda.
 
-Kuigi tema vokaalsed võimed ilmnesid juba varakult, polnud esimesel viieteistkümnel eluaastal laulmisel mingit laiemat väljundit. Musitseerida sai lihtsalt oma lõbuks või mõnikord näiteks sõpradega koolis esineda. Pärast oma vanemate lahutust hakkas häbelik teismeline tüdruk kodustest probleemidest eemale saamise eesmärgil üha rohkem laulmisega tegelema. 15-aastasena moodustas ta klassiõdedega kolmeliikmelise tüdrukuteansambli.
+Kui täiskasvanu ärkab ilusal kevadpäeval, siis ei pruugi ta selle hommiku ilu isegi märgata. Niivõrd palju on kohustusi, töid ja probleeme, millele mõelda. On ju neid ilusaid hommikuid juba üksjagu nähtud ka.
 
-Ühel heal päeval veetis saarel oma puhkust New Yorgis töötav muusikaprodutsent Evan Rogers. Kuna Rogersi abikaasa Jackie on Barbadoselt pärit, siis on ta saarel üsna sage külaline. "Ma olen alati seal ja inimesed teavad, et ma olen muusikaprodutsent ja laulukirjutaja, niisis igaüks teab kedagi, kes tahab mulle oma esinemist näidata," ütleb ta. Nii juhtus ka seekord, 2004. aastal.
+Kui aga laps ärkab ilusal kevadpäeval, sis mõtleb ta ainult sellest, kui kaunilt päev on alanud ja mida põnevat sellise ilusa ilmaga ette võiks võtta. Ta keskendub ainult hetkele ja ühele tegevusele.
 
-Ühiste tuttavate kaudu sai kokku lepitud Rihanna ja ta sõbrannade esinemine. "Üks neist oli Robyn Fenty ja ta paistis teiste seast silma," meenutab Rogers saatuslikku kohtumist, "hetkest, kui ta saali astus, koondus kogu tähelepanu temale." Muusikaprodutsent Evan Rogers palus Rihannal järgmisel päeval ilma sõbrannadeta tagasi tulla ning kutsus teda koos emaga elama enda juurde Stamfordi Ameerikasse, kavatsusega teha temast staar.
+See raamat räägibki sellest, kuidas me saame kõik oma kogemused ja tarkused kõrvale jätta ja elada ainult hetkes - siin ja praegu - ning nautida täielikult oma tegevusi. Kui me suhtume lapselikult, siis oleme oma töös efektiivsemad ja samas naudime oma tegevusi palju rohkem.
 
-Hoolimata Rihanna palvetest oli ta ema algul vastu. Rihanna ema leebus alles hiljem, kui sai teada, et Evani naine on Barbadoselt pärit. Vähem kui aasta hiljem koliski vaid 16-aastane Rihanna Evan Rogersi ja tema naise juurde Connecticuti ning hakkas oma demoalbumiga tööle.
+Lapselikult suhtudes liigume oma unistuste poole mängleva kergusega, saavutame tulemusi, mida ei uskunud end olevat võimalik saavutada ning me ei tunne mingit ängi või liigset pingutust. Pigem on see meile nagu kerge jalutuskäik.
 
-"Kui ma lahkusin Barbadoselt, siis ma ei vaadanud tagasi," meenutab Rihanna. "Ma tahtsin teha, mida ma pidin tegema, isegi kui see tähendaks Ameerikasse kolimist." Evanist ja Jackiest said ujedale Rihannale justkui teised vanemad. Koos äripartner Carl Sturkeniga lindistas Evan Rihanna esimese demo ning edasine on juba ajalugu - Rihannast sai rahvusvaheline R&B megastaar.
+Kuidas on see võimalik? Kuidas on võimalik, et ükskord peame nivõrd palju vaeva nägema, oleme kogu pingutuse vältel õnnetud ning saavutame ikkagi vaid keskpäraseid tulemusi? Samas kui teinekord teeme oma tööd loovalt, mänglevalt ning täie kohaloluga hetke nautides ning saavutame kõige selle juures veel ka hiilgavaid tulemusi.
 
-Kui Rihanna oli veel tundmatu tüdruk väikeselt ja vaeselt Barbadose saarelt, siis ei keskendunud ta sellele, et ta kodune elu on halb, vaid otsis innukalt, mida ta saaks teha. Samuti ei teinud ta suuri plane ega kulutanud kogu aega unistamisele voi planeerimisele. Ta elas lapselikult hetkes ja keskendus laulmisele. Ta ei laulnud selleks, et keegi soovitas tal seda teha, või et sellega ilmtingimata midagi saavutada. Eelkõige laulis ta seetõttu, et ta lihtsalt nautis seda üle kõige maailmas.
-
-Nagu ta ise ütleb: "Kui sa mõistad, kellele sa elad ja kellele on oluline meele järele olla, siis paljud inimesed tegelikult alustavad elamist. Ma ei kavatse kunagi sellesse takerduda. Ma vaatan tagasi oma elule ja ütlen, et ma nautisin seda - ja elasin iseendale."
-
-"MA OOTAN TÕELISE PÕNEVUSEGA, MIDA ELU MULLE TOOB." Robyn Rihanna Fenty
+Vastuse annavad need 40 lugu siin raamatus. Need räägivad väljapaistvate inimeste lapselikust suhtumisest. Lapselik suhtumine aitas Elvis Presleyl saada maailmakuulsaks, Neil Armstrongil lennata kuule, Abraham Lincolnil päästa Ameerika, Rafael Nadalil tennist mängida ning Picassol maalida. Kindlasti aitab see suhtumine ka sind, millised iganes su soovid ja unistused ka poleks.
