--- a/books/ära-kasva-suureks/02.ru.md
+++ b/books/ära-kasva-suureks/02.ru.md
@@ -1,26 +1,1 @@
-## История из детства
-## Рианна
-
-Миллионы маленьких девочек по всему миру мечтают стать мировыми суперзвездами. Иногда родители пытаются направить своего ребенка на этот золотой путь. Нанимается дорогой гувернер, ребенок поступает в музыкальную школу с престижной историей, отправляется на танцы, и ему читаются мотивирующие лекции.
-
-История Рианны совсем другого рода. Она родилась в 1988 году на чудесном маленьком острове Барбадос в Карибском море. Робин Рианна была старшей из троих детей в семье. Ее отец работал кладовщиком, а мама бухгалтером. По любопытной случайности прошла она в детстве курсы предпринимательства, которые окажутся ей очень полезными в будущем в жестоком музыкальном бизнесе. Она специально помогала отцу торговать одеждой на уличном рынке. Это научило ее продавать, а также тому, как работает рынок.
-
-Еще предприимчивый характер Робин придумал, как преумножать карманные деньги. Она покупала на развес конфеты, красиво упаковывала их, а затем перепродавала другим детям в школе с наценкой. На детство Робин Рианны сильно повлияла алкогольная и наркотическая зависимость ее отца, а также конфликтный брак родителей, который распался, когда Рианне было 14.
-
-Рианне уже с раннего детства нравилось петь дома про себя. Это довольно распространено в культуре Барбадоса. Она была замкнутым ребенком, а музыка - ее способом самовыражения. Она пела постоянно - своим родственникам, плюшевым мишкам, даже подушкам - и мечтала, что однажды станет звездой.
-
-Хотя ее вокальные способности проявились довольно рано, первые 15 лет ее жизни и пения не являются экстраординарными. Заниматься музыкой она начала просто для собственного удовольствия, или например часто выступала с друзьями в школе. После развода родителей застенчивая девочка-подросток, чтобы уйти от домашних проблем, начала все больше заниматься пением. В 15 лет она с двумя одноклассницами организовала ансамбль.
-
-Однажды на острове проводил свой отпуск музыкальный продюсер из Нью Йорка Эван Роджерс. Поскольку Джеки, жена Роджерса, родом с Барбадоса, он довольно часто гостил на острове. "Я постоянно там, и все знают, что я продюсер и композитор, поэтому у каждого есть кто-то, кто хочет выступить передо мной", - говорит он. Так случилось и в тот раз в 2004 году.
-
-Через одного общего знакомого Рианна и ее подруги договорились о выступлении. "Одной из них была Рианна Фенти, и она выделялась на фоне других", вспоминает Роджерс ту роковую встречу. Как только она вошла в зал, все внимание было сосредоточено на ней." Музыкальный продюсер Эван Роджерс попросил Рианну на следующий день вернуться без подруг и пригласил ее с матерью жить у себя в Стенфорде в Америке, намереваясь сделать из нее звезду.
-
-Несмотря на мольбы Рианны, ее мать вначале была против. Но позже она смягчилась, узнав, что жена Эвана родом с Барбадоса. Менее чем через год переехала 16-летняя Рианна к Эвану Роджерсу и его жене в Коннектикут и начала работать над своим демо альбомом.
-
-"С тех пор, как я уехала с Барбадоса, я не смотрела назад", вспоминает Рианна. "Я хотела делать то, что должна делать, даже если это означало переезд в Америку." Эван и Джеки стали застенчивой Рианне почти вторыми родителями. Вместе с партнером по бизнесу Карлом Стуркеном Эван Рианна записала первое демо, а дальнейшее это уже история - Рианна стала международной R&B мега звездой.
-
-Когда Рианна была еще никому не известной девочкой с бедного маленького острова Барбадос, она не концентрировалась на том, как плоха ее жизнь, однако усердно искала, что она может сделать. Также не строила она больших планов и не проводила все время в мечтах и за строительством планов. Она жила текущим моментом и концентрировалась на пении. Она пела не потому, что кто-то посоветовал ей этим заняться, или чтобы непременно чего-то достичь. Прежде всего она пела потому, что наслаждалась этим больше всего на свете.
-
-Как она сама утверждает: "Для многих людей жизнь начинается с понимания, для кого они живут, и кому нужно нравиться. Я никогда не хотела впутываться в это. Я оглядываюсь на свою жизнь и считаю, что всегда наслаждалась ей и жила исключительно для себя".
-
-"Я с большим интересом жду, что мне преподнесет жизнь." Робин Рианна Фенти.
+## Вступление
