--- a/books/ära-kasva-suureks/03.ee.md
+++ b/books/ära-kasva-suureks/03.ee.md
@@ -1,22 +1,23 @@
-## TÄISKASVANUD TÖÖTAVAD, LAPSED MÄNGIVAD
+## TÄISKASVANUD ELAVAD KÕIKJAL, LAPSED AINULT HETKES
 
-Täiskasvanud usuvad, et kõvasti ja kaua töötamine viib neid nende eesmärgi täitumiseni. Tegelikkus on aga hoopis vastupidine. Sa peaksid keskenduma hoopis sellele, et sinu töö oleks sulle piisavalt meeldiv, nagu mäng lapsele. Eranditult kõikide edukate inimeste edu valem seisneb selles, et nad naudivad enda tööd. Kui inimene töötaks päevas 14 tundi, ja seda lausa 10 aastat järjest, siis ikkagi ei saavutaks ta mitte mingisugustki edu, kui tal puudub huvi selle valdkonna vastu. Seda on tõestanud paljud näited elust enesest.
+Ma avaldan sulle ühe väga tähtsa saladuse, mida enamik täiskasvanuid ei mõista: elu leiab aset ainult praeguses hetkes. Minevik on juba olnud ja tulevik pole veel kohal. Täiskasvanud kipuvad elama kas minevikus toimunud sündmustele mõeldes või tulevikku planeerides. Sellisel viisil aga sa ei saa kunagi nautida hetke ja elada täiel rinnal. Kui sa ei ela täiel rinnal, siis sa ei saa olla kuigi õnnelik ega edukas.
 
-Vaata enda ümber ringi. Kõikjal näed sa inimesi, kes on keskpärased, õnnetud ja kes ei naudi oma tööd. Nad ei saavuta vähimatki edu! Nad lihtsalt teevad oma tööd - kireta, keskpäraselt, tuimalt. Nad pole kunagi palju vaeva näinud, et mõelda, millist tööd nad tegelikult teha tahaksid. 
+Lapsed seevastu elavad ainult käesolevas hetkes. Nemad ei planeeri pidevalt tulevikku ega analüüsi minevikus toimunut. Tundub, justkui täiskasvanud oleksid vahetanud elu elamise selle analüüsimise vastu. Nii võibki juhtuda, et sel ajal kui täiskasvanud plaane teevad, läheb samal hetkel elu nendest mööda.
 
-Saladus ei seisne asjaolus, et kui töötad kauem ja rohkem, siis tabab sind edu. Võti on hoopis selles, et oma aega ja energiat tuleb kulutada otsimisele - saamaks teada, mis sulle väga meeldib. Sa peaksid valima oma tööd samamoodi, nagu laps valib omale tegevusi - ta ei tegele igava mänguga, ta tahab mängida põnevat mängu!
+Samuti nagu minevikus kaevamine on ka tuleviku ennustamine tänamatu ja asjatu. Sa ei oska ealeski ette näha elu keerdkäike ja enda tulevikku ette planeerida. Elu mitmekesisus ja ettearvamatus lõhub alati sinu tehtud plaanid. Lapsed oskavad hetkes elada. Nad mängivad ennastunustavalt ja keskenduvad ainult siin ja praegu toimuvale.
 
-Kui oled kord sellise tegevuse leidnud, sis ei pea sa sisuliselt päevagi enam töötama, vaid saad hakata mängima nagu laps. Selle kõige juures on parim veel see, et töö, mida sa tõeliselt oskad, mille vastu sul on sügav huvi ja mida sa naudid, selles suudad sa saavutada kõige väljapaistvamaid tulemusi! Sinu enda võimete juures, ma mõtlen. Sest ära unusta, et meist kõigist ei saa ilmselt maailmakuulsaid leiutajaid, geniusi ja popstaare. Me peame mängima nende kaartidega, mis meile sünnihetkel kätte jagati.
+Ka sina peaksid seda lastelt õppima ja elama ainult käesolevas hetkes. Kujuta ette last, kes mängib oma mänguasjadega. Ta ei lase ennast segada. Ta tegutseb ennastunustavalt. Ta ei tunne süüd luhtunud varasemate mängude pärast. Samuti ei püüa ta ennustada, mida ta homme või ülehomme mängib. Ta keskendub jäägitult ainult praeguse hetke mängule. Täpselt samamoodi teevad täiskasvanud inimesed, kes on oma alal edukad. Iga eduka inimese saladus on jäägitu pühendumine oma tegevusele just praeguses hetkes. Ainult nii on võimalik lahendada meie ees seisvaid ülesandeid kvaliteetselt.
 
-Ma ei taha, et sa piiraksid ennnast asjatult liiga kõrgete või liiga madalate eesmärkidega. Kumbki variant ei ole hea. Liga kõrged eesmärgid tekitavad frustratsiooni ja liiga madalad eesmärgid tüdimust. Kõige tervislikum ja tulemuslikum on lasta elul ennast kanda, täpselt nagu lapsed usaldavad praegust hetke. Ja siis tuleb võtta nendest hetkedest maksimum. Mängigem iga hetk seda tööd, mis meile nii väga meeldib!
+Tihti võib tegevusetus olla sinu parim valik. Täiskasvanud üritavad teha kõike korraga, kiiresti ja efektiivselt. Kui täiskasvanu joob hommikukohvi, siis sõidab ta mõttes juba autoga tööle. Kui ta on autosse istunud, motleb ta aga juba enda lõunapausi sisustamisele. Selliselt tormates me ei märka õigeid lahendusi, mida on võimalik näha ainult hetkes elades, samas jättes endale aega ka tegevusetult olemiseks.
 
-Täiskasvanuna jääb meie motlemine kinni mallidesse. Ükskord tuleb kätte hetk, mil arutleme väga targalt ja kainelt küsimuse üle, mis eriala oleks pisavalt tõsiseltvõetav ning jälgime maailmas hetkel kõige populaarsemaid trende jne. Täiskasvanuid huvitab kogukonna respekteering. Kindlasti on maailma rikides erinevad tavad, kuid tavaliselt peetakse heaks karjäärivalikuks ärijuhi, arsti, juristi ametit või muud seesugust. Aga see on ainult ühiskonna ootus. Kui sa tahad kogukonnale tõeliselt meeldida, siis peaksid olema täielikult sina ise! Leia just selline tegevus, mis sind endasse haarab, isegi kui see läheb vastuollu hetke trendidega.
+Kui sa veedad aega ka täiesti mitte midagi tehes, siis lülitad sa enda aju justkui autopiloodilt välja ja su mõte saab hakata taas efektiivsemalt tööle. Näed enda probleeme uuest vaatenurgast, su loovus avaneb ja leiad täiesti uudseid lahendusi, mida sa varem ei märganud, kuna kiirustasid.
 
-Kui sa suhtud oma töösse tõelise kirega, void ka ise uue trendi kujundada. Kõige rohkem tunnustust saab sulle osaks ainult siis, kui leiad töö, mis on sinu jaoks sama põnev kui mäng lapse jaoks. Muidugi peab sinu töö olema ka inimestele või firmadele kasulik, sest muidu ei maksta sulle selle eest ka raha. Kindlasti käivad selle kõige juures käsikäes kaks asja - vajadus sinu töö järele ja tasu selle eest. Nii et mida rohkem sa mängid ja mida paremini see sul välja tuleb, seda rohkem hakkad saama ka raha. Sa veedad töö juures suurema osa oma ärkvel oldud ajast. Sa ei saa endale lubada olukorda, et teed sellist tööd, mis sulle tegelikult ei meeldi. See tähendab ju seda, et valdav osa sinu elust pole muud kui õnnetu! See oleks lihtsalt lubamatu ja kurb!
+Ühelt lapseliku suhtumisega edukalt ettevõtjalt küsiti kord, mida ta soovitaks teda praegu kuulavatele noortele, kes soovivad saada sama edukaks, kui tema seda on. Või mida ta soovitaks vanematele inimestele, kes sooviksid hakata ettevõtjaks. Edukas ettevõtja mõtles sekundi ja ütles, et tal on ainult üks soovitus: "Hakka kohe pihta!" Ajakirjanik küsis veel täpsustavaid küsimusi, et kuidas ikkagi erinevate projektide jaoks ettevalmistusi teha, mida õppida või kuhu pöörduda, kuid ettevõtja jäi endale kindlaks ja ütles uuesti vastuseks täpselt sama lause: "Hakka lihtsalt kohe praegu pihta!" Ta selgitas, et liigne targutamine, uurimine, ettevalmistamine ja muu viib fookuse põhiasjalt kõrvale ja ei lase keskenduda alustamisele.
 
-Kas mäletad lapsena neid momente, mil parasjagu oli pooleli mingi eriti põnev mäng. Tol hetkel oli elu niivõrd põnev, et isegi WC-sse minek tundus ajaraiskamisena ja sa lükkasid seda võib-olla edasi, niipalju kui suutsid. Häda oli juba päris suur, aga ikkagi ei
-tahtnud sa veel pissile minna.
+Kõige tähtsam on lihtsalt võtta kätte ja alustada, kuna maailm on täis suurepäraseid, kuid realiseerumata plaane ja häid kavatsusi. Ma saan tema nõuandest suurepäraselt aru! Iga teekonna kõige raskem hetk on alati esimene samm ehk alustamine.
 
-Kui sa ka täiskasvanuna tunned vetsus istudes, et sa pead kohe-kohe kiirustama tagasi tööle, kuna pooleli jäi midagi põnevat ja huvitavat, siis oled sa leidnud enda jaoks õige töö. Kui sa pole kunagi tundnud sellist põnevust, siis peaksid mõtlema, kas töö, mida teed, on ikka sinu jaoks kõige õigem. Soovitan sul otsida ja mitte lõpetada enne, kuni oled leidnud sellise töö. Elu on mäng, mängi seda!
+Täiskasvanud lükkavad pidevalt oma plaane tulevikku, kuid seda õiget hetke ei tulegi kunagi. Sa pead lihtsalt elama hetkes nagu laps, ja olema julge, kartmatu nagu laps ning hakkama kohe pihta! Planeerimine, kaalutlemine, mõtlemine - need kõik on väga täiskasvanulikud ja arukad tegevused, kuid need on tõelise tegevuse vastandid. Kui sa hakkad kohe pihta, alustad otsast, siis sa jõuad teel olles niikuinii piisavalt planeerida, kaalutleda ja mõelda. Plaane teha jõuad sa alati, aga kohe pihta hakkamise hetke ei tohi sa mööda lasta!
 
-Täiskasvanud arvavad, et töö on mingi sundtegevus, mis tuleb lihtsalt ära kannatada. Õnnelikud ja edukad inimesed ei tööta päevagi oma elus, sest nende töö on kui mäng lastele - nad töötavad ennastunustavalt, kirglikult ja täie hingega.
+Sa ei pea teadma, kus su tee lõppeb, vaid ainult seda, kus see algab. Mine lihtsalt edasi ja kui sa jõuad kohale, siis näed sa järgmisi võimalusi edasiminekuks. Teekonda alustamata ei saa sa kunagi teada, kuhu sa oleksid välja jõudnud.
+
+Iga inimene, kes on oma alal edukas, pühendub oma tegevusele jäägitult just käesolevas hetkes, täpselt nagu laps keskendub oma tegevusele ainult praeguses hetkes.
