--- a/books/ära-kasva-suureks/03.ru.md
+++ b/books/ära-kasva-suureks/03.ru.md
@@ -1,21 +1,23 @@
-## Взрослые работают, дети играют
+## ВЗРОСЛЫЕ ЖИВУТ ВО ВСЕХ ВРЕМЕНАХ ОДНОВРЕМЕННО, ДЕТИ ЖЕ ТОЛЬКО В НАСТОЯЩЕМ
 
-Взрослые верят, что долгая и усердная работа поможет им достичь целей. Реальность же совершенно противоположна. Ты должен вместо этого сосредоточиться на том, чтобы работа стала достаточно привлекательной, как игра для ребенка. Формула успеха всех без исключения успешных людей состоит в том, чтобы получать удовольствие от работы. Если бы человек работал по 14 часов в день 10 лет подряд, то он почти наверняка ничего бы не достиг, поскольку полностью потерял интерес к своей сфере деятельности. Это доказывают многочисленные примеры из жизни.
+Я открою тебе один важный секрет, о котором не догадывается большинство взрослых: жизнь существует только в текущий момент. Прошлое уже было, а будущее еще не пришло. Взрослые склонны жить в мыслях о событиях прошлого или в планах на будущее. Однако так ты никогда не сможешь насладиться моментом и пожить полной жизнью. А если ты не живешь полной жизнью, ты никогда ты станешь счастливым и успешным.
 
-Оглянись вокруг. Мир полон ординарных людей, которые несчастны и не получают удовольствия от своей работы. Они не станут особенно успешны. Они просто делают свою работу, не спеша, посредственно, равнодушно. Они никогда не прикладывали достаточно усилий, чтобы разобраться, чем им действительно хотелось бы заниматься. 
+Дети же наоборот живут лишь в настоящем моменте. Они не планируют постоянно будущее и не анализируют произошедшие события. Кажется, как будто бы взрослые променяли свою жизнь на анализирование. Однако может получиться, что пока взрослые строят планы, жизнь их проходит мимо.
 
-Секрет заключается не в том, что тебя ждет успех, если работать больше и дольше. Наоборот, ключ в том, чтобы свое время и энергию потратить на поиски и понимание, что тебе нравится. Ты должен выбирать работу как выбирает себе занятие ребенок - он не играет со скучными игрушками, он хочет играть в увлекательную игру.
+Также как и копание в прошлом, предсказание будущего - дело неблагодарное и бесполезное. Ты никогда не сможешь предугадать повороты судьбы и спланировать свое будущее. Многогранность и неопределенность жизни всегда разрушает планы. Дети умеют жить моментом. Они играют самозабвенно и сосредотачиваются только на том, что происходит здесь и сейчас.
 
-Если ты найдешь такое дело, то тебе больше не придется работать ни дня, а сможешь вместо этого играть как ребенок. И лучшее всего еще то, что дело, в котором ты действительно разбираешься, к которому у тебя есть глубочайший интерес, и от которого ты получаешь удовольствие, в нем ты сможешь достичь и самого выдающегося результата. Из всех возможных вариантов, конечно. Потому что не стоит забывать, что не все из нас, очевидно, могут стать всемирно известными изобретателями, гениями или поп-звездами. Нам приходится играть теми картами, которые нам выдали при рождении.
+И ты должен научиться у детей жить только в настоящем. Представь себе ребека, играющего со своими игрушками. Он не даст себе мешать. Он действует самозабвенно. У него нет чувства вины за неудавшиеся игры прошлого. И он не пытается предсказать, во что будет играть завтра или послезавтра. Он сосредоточен полностью только на текущей игре. Так же поступают взрослые, которые преуспели в своем деле. Секрет каждого успешного человека в преданности без остатка текущему делу. Только так можно качественно решить встающие перед нами задачи.
 
-Не хочу, чтобы ты напрасно ограничивал себя ни завышенными, ни заниженными целями. Оба варианта плохие. Слишком высокие цели вызывают фрустрацию, а слишком низкие - скуку. Наиболее здоровый и результативный вариант это позволить жизни вести себя, точно как дети доверяют выбор текущему моменту. А затем нужно получить от него максимум. Превращая каждую минуту работы в игру, которая нам очень нравится.
+Зачастую твоим лучшим выбором может оказаться ничего не делать. Взрослые пытаются делать все сразу, быстро и эффективно. Когда взрослый пьет свой утренний кофе, то в мыслях он уже в машине едет на работу. Когда он садится в машину, то думает, куда пойдет на обед. Так второпях мы не замечаем правильных решений, которые могли бы увидеть, живя лишь в настоящем, давая себе время на бездействие.
 
-Täiskasvanuna jääb meie motlemine kinni mallidesse. Ükskord tuleb kätte hetk, mil arutleme väga targalt ja kainelt küsimuse üle, mis eriala oleks pisavalt tõsiseltvõetav ning jälgime maailmas hetkel kõige populaarsemaid trende jne. Täiskasvanuid huvitab kogukonna respekteering. Kindlasti on maailma rikides erinevad tavad, kuid tavaliselt peetakse heaks karjäärivalikuks ärijuhi, arsti, juristi ametit või muud seesugust. Aga see on ainult ühiskonna ootus. Kui sa tahad kogukonnale tõeliselt meeldida, siis peaksid olema täielikult sina ise! Leia just selline tegevus, mis sind endasse haarab, isegi kui see läheb vastuollu hetke trendidega.
+Когда ты проводишь время, ничего не делая, то мозг как-будто выключает автопилот и снова начинает мыслить эффективно. Показывает тебе проблемы под другим углом, твои творческие способности раскрываются и находят совершенно новые решения, которых ты раньше не замечал, когда торопился.
 
-Если ты относишься к своей работе с неподдельной страстью, то можешь и сам задавать тренды. Больше всего признания ты получишь только тогда, когда найдешь работу столь же увлекательную, как игра для ребенка. Конечно, твоя работа должна быть полезна людям или компании, поскольку в противном случае никто не заплатит за нее. Определенно потребность в работе и плата за нее всегда ходят рука об руку. Так как чем больше ты играешь и чем лучше у тебя выходит, тем больше ты начинаешь зарабатывать. Ты проводишь на работе большую часть своего активного времени. Ты не можешь позволить себе делать работу, которая тебе на самом деле не нравится. Ведь это означало бы, что подавляющая часть твоей жизни несчастна. И это просто грустно и недопустимо.
+У одного успешного предпринимателя с детским подходом однажды спросили, что бы он посоветовал слушающей его молодежи, которая хотела бы стать таким же успешным, как и он. И что бы он посоветовал людям постарше, которые хотели бы открыть свой бизнес. Успешный предприниматель секунду подумал и сказал, что у него только один совет: "Начните!". Журналист задал уточняющие вопросы, как все-таки готовиться к различным проектам, что изучать или куда обращаться, но предприниматель остался верен себе и снова в качестве ответа произнес то же самое предложение: "Просто сразу же начинайте действовать!". Он пояснил, что излишняя болтовня, исследования, подготовка и тому подобное смещают фокус с главного и не позволяют сосредоточиться на том, чтобы начать.
 
-Помнишь те моменты из детства, когда ты был в процессе особенно увлекательной игры. В тот момент жизнь была настолько увлекательной, что даже поход в туалет ощущался как потеря времени, и ты откладывал его еще и еще, столько, сколько мог вытерпеть. Нужда уже была довольно большой, но ты, тем не менее, все не хотел идти в туалет.
+Самое важное просто собраться и начать, пока мир полон великолепных, но нереализованных планов и отличных замыслов. Его совет я могу понять прекрасно. Самый сложный момент в любом пути это всегда первый шаг или начало.
 
-Если ты во взрослом возрасте продолжаешь чувствовать, сидя в туалете, что хочешь как можно скорее вернуться к работе, потому что нечто интересное и увлекательное осталось незаконченным, то ты нашел правильную работу. Если ты никогда не чувствовал подобного возбуждения, то стоит задуматься, действительно ли твоя работа подходит тебе больше всего. Советую тебе искать и не останавливаться, пока не найдешь такую. Жизнь это игра, играй в нее.
+Взрослые постоянно откладывают планы на потом, но идеальный момент никогда настает. Нужно просто жить здесь и сейчас, как ребенок, быть смелым и бесстрашным, как ребенок, и сразу начинать действовать. Планирование, обдумывание и размышление это все очень взрослые и разумные вещи, однако они - противоположность настоящему делу. Если ты сразу начнешь действовать, с самого начала, то у тебя все равно будет возможность достаточно поразмышлять и распланировать по пути. Планировать можно всегда, но нельзя позволить ускользнуть моменту начала действования.
 
-Взрослые думают, что работа это некое вынужденное дело, которое просто нужно терпеть. Счастливые успешные люди не работают ни дня в своей жизни, потому что для них работа как игра для ребенка - они работают самозабвенно, страстно и со всей душой.
+Ты не обязан знать, где конец пути, только лишь его его начало. Просто иди вперед, и когда прибудешь на место, то увидишь и возможности для дальнейшего продвижения. Не начав путешествие, ты не можешь знать, куда смог бы добраться.
+
+Каждый человек, добившийся успеха в своей области, посвящает своему делу все без остатка, точно как ребенок, сосредоточившийся на своем текущем занятии.
