--- a/books/ära-kasva-suureks/14.ru.md
+++ b/books/ära-kasva-suureks/14.ru.md
@@ -1,14 +1,14 @@
-## История о детской забаве
-## Джон Леннон
+## История детской непосредственности
+## Марк Твен
 
-Битлз - самая успешная группа в истории поп-музыки. Джон Леннон, один из основателей группы, был чрезвычайно успешным и продуктивным композитором и исполнителем. Поэтому кажется странным тот факт, что Джон был еще и страстным игроком в Монополию. Можно даже сказать, что у него была зависимость от Монополии. Во время гастролей Джон всегда брал с собой набор, чтобы играть в самолетах и отелях. Его любимыми участками были Boardwalk и Park Place. Если эти два участка принадлежали ему, исход игры его уже не волновал.
+Настоящее имя Марка Твена, легендарного американского писателя, - Сэмюэл Лэнгхорн Клеменс. История о том, каким образом он взял себе в качестве рабочего псевдонима имя Марк Твен довольно необычна.
 
-В 1964 году небольшая группа английских и американских журналистов летела вместе с Битлз в их тур по Северной Америке. Среди них был 35 летний Арт Шрейбер, старший корреспондент Group W, чьей обычной специализацией были политика и внутренние дела государства. Шрейбер придумал, как отыскать точки соприкосновения с настолько чужой для себя областью и найти общий язык с Битлз. В мимолетной беседе ему удалось упомянуть Джону, что он недавно играл в Монополию. После этого холодный и немногословный Джон превратился в воодушевленного мальчишку. "У меня она с собой" - сказал он.
+Клеменс вырос в городе Ганнибал, стоящем на реке Миссисипи, и с детства мечтал стать капитаном речного парохода. С 21 года он начал учиться управлять пароходом на реке Миссисипи, претворяя свою детскую мечту в жизнь. И два года спустя уже лицензированным капитаном парохода он приступил к постоянной работе.
 
-Шрейбер вспоминает, что с того момента они постоянно играли в Монополию. Игра порой затягивалась до столь позднего часа, что он засыпал. Но Джон Леннон толкал его и говорил: "Арт, твой ход". Иногда к ним присоединялся гитарист Битлз Джордж Харрисон. Джордж, по словам Шрейбера, за всю игру едва ли произносил одно слово, в то время как Джон всегда был очень вовлечен и взволнован.
+Он любил свою работу - это была интересная, хорошо оплачиваемая должность с высоким социальным статусом. Управление пароходом было ответственным делом, поскольку приходилось постоянно избегать мелей. Для того чтобы пароход мог безопасно передвигаться, глубина реки должна была составлять как минимум 12 футов, и среди членов экипажа любимыми мерами глубины были "марк ван" (марк один), т.е. один сажень, или "марк твен" (марк два), т.е, две сажени, что означало безопасную глубину в 12 футов. "Твен" это устаревшая форма слова "ту" (два).
 
-По мнению Леннона музыкальный бизнес похож на игру в Монополию. В одном интервью во время Хит Парада 1969 года он сказал: "Это как Монополия, со всеми этими банкирами - и в нее играют крупные рыбы за большим столом. Ты знаешь ценность куска ... Значит я дам тебе The Strandi или Old Kent Road, а ты говоришь "Нет, дай мне два дома". Все именно так и происходит."
+К сожалению капитаном парохода он смог пробыть всего два года, а затем разразившаяся гражданская война приостановила речное сообщение. Однако поскольку сердцу Клеменса работа на реке была очень мила, позже в возрасте 27 лет во время написания одного рассказа о путешествиях, он впервые взял себе псевдоним Марк Твен. С точки зрения взрослого человека имя, конечно же, должно быть серьезным и значить что-то логичное. Но Марк Твен исходил из своей детской непосредственности - он просто взял имя, близкое сердцу. Поскольку "марк твен" означает безопасную глубину, то конечно же со времен работы на реке у него остались теплые ассоциации с этим термином.
 
-Джон Леннон определенно был по-детски счастливым человеком. Он играл в Монополию вместо того, чтобы беспокоиться о взрослых проблемах. Наверное невозможно создать лучшую в мире группу без детского отношения к жизни.
+Это взятое из сленга Миссисипи ребяческое имя стало в течение жизни автора знаменитым на весь мир. Однако кто знает, быть может и не стал бы он никогда автором таких хороших произведений, если бы не имя, которое ему так нравилось.
 
-"Потраченное с удовольствием время потрачено не напрасно." Джон Уинстон Леннон
+"Я никогда не позволял школьному образованию вмешиваться в мое образование". Сэмюэль Лангхорн Клеменс
