--- a/books/ära-kasva-suureks/16.ru.md
+++ b/books/ära-kasva-suureks/16.ru.md
@@ -1,14 +1,14 @@
-## История детской посвященности
-## Нил Армстронг
+## История о детской забаве
+## Джон Леннон
 
-Как так получилось, что именно Нилу Армстронгу посчастливилось стать первым человеком, который удостоился чести ступить на поверхность Луны? Почему именно он и никто другой? Ответ заключается в детской посвященности.
+Битлз - самая успешная группа в истории поп-музыки. Джон Леннон, один из основателей группы, был чрезвычайно успешным и продуктивным композитором и исполнителем. Поэтому кажется странным тот факт, что Джон был еще и страстным игроком в Монополию. Можно даже сказать, что у него была зависимость от Монополии. Во время гастролей Джон всегда брал с собой набор, чтобы играть в самолетах и отелях. Его любимыми участками были Boardwalk и Park Place. Если эти два участка принадлежали ему, исход игры его уже не волновал.
 
-Армстронг был влюблен в полеты с очень раннего возраста. С трех лет он играл с самолетиками, а в пять или шесть прошел свой первый урок полетов. В возрасте восьми или девяти лет он построил несколько моделей самолетов из бальзового дерева. В пятнадцать смог, работая в аптеке, накопить достаточно денег, чтобы оплатить уроки полетов на расположенном неподалеку от дома аэродроме Wapakoneta в Охайо.
+В 1964 году небольшая группа английских и американских журналистов летела вместе с Битлз в их тур по Северной Америке. Среди них был 35 летний Арт Шрейбер, старший корреспондент Group W, чьей обычной специализацией были политика и внутренние дела государства. Шрейбер придумал, как отыскать точки соприкосновения с настолько чужой для себя областью и найти общий язык с Битлз. В мимолетной беседе ему удалось упомянуть Джону, что он недавно играл в Монополию. После этого холодный и немногословный Джон превратился в воодушевленного мальчишку. "У меня она с собой" - сказал он.
 
-В 16 лет началась его карьера летчика-испытателя. Он летал на маленьких самолетах после сделанного местным механиком капитального ремонта мотора. Так Армстронг наработал множество летных часов. После работы испытателем Армстронг был военным летчиком-истребителем, а затем присоединился к НАКА, которая впоследствии стала космическим агентством НАСА. К 1969 году благодаря своей страсти 38-летний Нил Армстронг успел полетать более чем на 200 различных типах летательных аппаратов, среди которых различные планеры, винтовые и реактивные самолеты, самолеты-истребители, вертолеты и космические ракеты.
+Шрейбер вспоминает, что с того момента они постоянно играли в Монополию. Игра порой затягивалась до столь позднего часа, что он засыпал. Но Джон Леннон толкал его и говорил: "Арт, твой ход". Иногда к ним присоединялся гитарист Битлз Джордж Харрисон. Джордж, по словам Шрейбера, за всю игру едва ли произносил одно слово, в то время как Джон всегда был очень вовлечен и взволнован.
 
-Армстронг работал пилотом, а также космическим инженером. Учитывая большое количество летных часов и безграничную посвященность делу, в 1969 году он стал для НАСА самым лучшим и логичным выбором для управления полетом к Луне. Эта миссия стала естественным продолжением и кульминацией его карьеры, а также самым большим испытанием в жизни, поскольку когда команда Аполлона 11 начала приземление на Луну, неожиданно выяснилось, что компьютер не сможет совершить посадку.
+По мнению Леннона музыкальный бизнес похож на игру в Монополию. В одном интервью во время Хит Парада 1969 года он сказал: "Это как Монополия, со всеми этими банкирами - и в нее играют крупные рыбы за большим столом. Ты знаешь ценность куска ... Значит я дам тебе The Strandi или Old Kent Road, а ты говоришь "Нет, дай мне два дома". Все именно так и происходит."
 
-Армстронг использовал весь свой опыт и посадил космический корабль Eagle на поверхность Луны. Первый шаг человека по поверхности Луны стал кульминацией его карьеры. Эта большая честь выпала ему потому, что с трех лет он отдавался своей страсти - полетам. Пока другие взрослели, ходили в университет и офис, Армстронг по-прежнему посвящал себя тому, что любил в жизни больше всего. Детская любовь к одному делу привела к тому, что он изменил ход истории.
+Джон Леннон определенно был по-детски счастливым человеком. Он играл в Монополию вместо того, чтобы беспокоиться о взрослых проблемах. Наверное невозможно создать лучшую в мире группу без детского отношения к жизни.
 
-"Пилоты не очень любят ходить. Пилотам нравится летать." Нил Олден Армстронг
+"Потраченное с удовольствием время потрачено не напрасно." Джон Уинстон Леннон
