--- a/books/ära-kasva-suureks/01.ru.md
+++ b/books/ära-kasva-suureks/01.ru.md
@@ -1,23 +1,17 @@
-## ВЗРОСЛЫЕ ЖИВУТ ВО ВСЕХ ВРЕМЕНАХ ОДНОВРЕМЕННО, ДЕТИ ЖЕ ТОЛЬКО В НАСТОЯЩЕМ
+## Предисловие
 
-Я открою тебе один важный секрет, о котором не догадывается большинство взрослых: жизнь существует только в текущий момент. Прошлое уже было, а будущее еще не пришло. Взрослые склонны жить в мыслях о событиях прошлого или в планах на будущее. Однако так ты никогда не сможешь насладиться моментом и пожить полной жизнью. А если ты не живешь полной жизнью, ты никогда ты станешь счастливым и успешным.
+Что отличает счастливых людей от несчастных? В чем разница между людьми, которые с легкостью исполняют свои мечты, и теми, кто не исполняет их никогда? Два человека могут бок о бок делать одно и то же, однако один из них будет счастлив, а другой - нет. Один из них претворяет свои мечты в жизнь, а другой даже не приближается к их осуществлению. Причем тот, кто счастлив и успешен, может не быть умнее, образованнее, привлекательнее или каким-нибудь другим образом лучше. Суть в том, что разница между счастливыми и несчастными людьми лишь в их отношении.
 
-Дети же наоборот живут лишь в настоящем моменте. Они не планируют постоянно будущее и не анализируют произошедшие события. Кажется, как будто бы взрослые променяли свою жизнь на анализирование. Однако может получиться, что пока взрослые строят планы, жизнь их проходит мимо.
+Все мы в течение жизни обращали внимание, что порой относимся к вещам лучше. Иногда все идет как по маслу. Нас словно несет своеобразный поток, при помощи которого все, что мы предпринимаем, проходит успешно. У тебя хорошее настроение, ты открыт, весел, сообразителен, полон радости и готов творить. Ты чувствуешь, что в настоящий момент абсолютно на своем месте и берешь от жизни все. 
 
-Также как и копание в прошлом, предсказание будущего - дело неблагодарное и бесполезное. Ты никогда не сможешь предугадать повороты судьбы и спланировать свое будущее. Многогранность и неопределенность жизни всегда разрушает планы. Дети умеют жить моментом. Они играют самозабвенно и сосредотачиваются только на том, что происходит здесь и сейчас.
+Иной раз нас будто окружает некое облако негативной энергии - все идет вкривь и вкось, мы словно настроены на неправильную волну. Все начинает казаться слишком сложным, настроение плохое, недоброжелательное и пессимистичное. Мы не в состоянии в полной мере наслаждаться моментом, рассеяны и обеспокоены.
 
-И ты должен научиться у детей жить только в настоящем. Представь себе ребека, играющего со своими игрушками. Он не даст себе мешать. Он действует самозабвенно. У него нет чувства вины за неудавшиеся игры прошлого. И он не пытается предсказать, во что будет играть завтра или послезавтра. Он сосредоточен полностью только на текущей игре. Так же поступают взрослые, которые преуспели в своем деле. Секрет каждого успешного человека в преданности без остатка текущему делу. Только так можно качественно решить встающие перед нами задачи.
+Множество книг о мотивации говорят о том, как настроиться на так называемую правильную волну, стать счастливым и двигаться в направлении осуществления мечты. Зачем же тогда нужно было писать еще одну? Потому что, на мой взгляд, множество книг о счастливой жизни говорят правильные вещи, однако большинство из них описывает простые вещи слишком сложно - мы можем прочить несколько таких и, несомненно, согласиться со всем прочитанным, однако остаться в еще большем замешательстве, чем до того, как взяли книгу в руки.
 
-Зачастую твоим лучшим выбором может оказаться ничего не делать. Взрослые пытаются делать все сразу, быстро и эффективно. Когда взрослый пьет свой утренний кофе, то в мыслях он уже в машине едет на работу. Когда он садится в машину, то думает, куда пойдет на обед. Так второпях мы не замечаем правильных решений, которые могли бы увидеть, живя лишь в настоящем, давая себе время на бездействие.
+Хороший совет или теория всегда отличаются краткостью, не многословностью, потому что основная мысль длинной и обширной теории плохо запоминается. Совет этой книги как стать счастливым состоит всего из двух слов: "Не взрослей". В книге эта мысль рассматривается со всех сторон, чтобы ты смог хорошо обдумать ее простой и запоминающийся посыл. Каждая глава описывает одно различие между детским и взрослый подходом, а в конце описывается история одного из изменивших мир людей, который использовал детское отношение, например Роберт Де Ниро, Авраам Линкольн, Леонардо да Винчи, Опра, Джон Леннон и Стив Джобс.
 
-Когда ты проводишь время, ничего не делая, то мозг как-будто выключает автопилот и снова начинает мыслить эффективно. Показывает тебе проблемы под другим углом, твои творческие способности раскрываются и находят совершенно новые решения, которых ты раньше не замечал, когда торопился.
+Всю свою сознательную жизнь я изучал различия между счастливыми и несчастными людьми. И с абсолютной уверенностью я утверждаю, что единственное, что делает счастливым или несчастным это отношение. И это хорошо, поскольку значит, что в нашей власти увеличить свое счастье и поднять качество жизни. Все счастливые люди как бессознательно, так и осознанно применяют детское отношение.
 
-У одного успешного предпринимателя с детским подходом однажды спросили, что бы он посоветовал слушающей его молодежи, которая хотела бы стать таким же успешным, как и он. И что бы он посоветовал людям постарше, которые хотели бы открыть свой бизнес. Успешный предприниматель секунду подумал и сказал, что у него только один совет: "Начните!". Журналист задал уточняющие вопросы, как все-таки готовиться к различным проектам, что изучать или куда обращаться, но предприниматель остался верен себе и снова в качестве ответа произнес то же самое предложение: "Просто сразу же начинайте действовать!". Он пояснил, что излишняя болтовня, исследования, подготовка и тому подобное смещают фокус с главного и не позволяют сосредоточиться на том, чтобы начать.
+В этой книге приведены 40 примеров из жизни всемирно известных в разных сферах деятельности людей, которые смогли претворить свои мечты в жизнь только благодаря детскому отношению. Поэтому я полностью уверен, что подобное отношение сможет помочь воплотить свои мечты в жизнь и тебе, неважно какие мечты и из какой области! Надеюсь, ты получишь от прочтения этой книги удовольствие и в дальнейшем будешь (еще больше) наслаждаться жизнью.
 
-Самое важное просто собраться и начать, пока мир полон великолепных, но нереализованных планов и отличных замыслов. Его совет я могу понять прекрасно. Самый сложный момент в любом пути это всегда первый шаг или начало.
-
-Взрослые постоянно откладывают планы на потом, но идеальный момент никогда настает. Нужно просто жить здесь и сейчас, как ребенок, быть смелым и бесстрашным, как ребенок, и сразу начинать действовать. Планирование, обдумывание и размышление это все очень взрослые и разумные вещи, однако они - противоположность настоящему делу. Если ты сразу начнешь действовать, с самого начала, то у тебя все равно будет возможность достаточно поразмышлять и распланировать по пути. Планировать можно всегда, но нельзя позволить ускользнуть моменту начала действования.
-
-Ты не обязан знать, где конец пути, только лишь его его начало. Просто иди вперед, и когда прибудешь на место, то увидишь и возможности для дальнейшего продвижения. Не начав путешествие, ты не можешь знать, куда смог бы добраться.
-
-Каждый человек, добившийся успеха в своей области, посвящает своему делу все без остатка, точно как ребенок, сосредоточившийся на своем текущем занятии.
+Приятного чтения!
