--- a/books/ära-kasva-suureks/04.ee.md
+++ b/books/ära-kasva-suureks/04.ee.md
@@ -1,12 +1,26 @@
-## LUGU LAPSELIKULT MÄNGIMISEST
-## Thomas A. Edison
+## LUGU LAPSELIKULT HETKES ELAMISEST
+## Rihanna
 
-Õigupoolest räägib see lugu Thomas A. Edisoni vanematest. Kui väike Edison oli alles seitsmeaastane, märkasid ta vanemad, et poiss on väga eriline ja andekas. Thomasele meeldis kõikidelt täiskasvanutelt, kellega ta kokku puutus, küsida palju küsimusi igasuguste nähtuste tekkepõhjuste kohta. Samuti meeldis talle palju lugeda. Sellest hoolimata pidas õpetaja G. B. Engle teda rumalaks, kuna poisile ei meeldinud matemaatika ning ta küsis liga palju küsimusi. Tol ajal ei olnud kooliõpilastel lubatud esitada küsimusi. Pärast kolme kuud koolis käimist nimetas õpetaja Thomast hälvikuks (inglise keeles: addled), mispeale ema Nancy Edison läks kooli õpetajaga rääkima. Õpetaja selgitas, et Thomas lihtsalt ei keskendu ja ei suuda õppida.
+Miljonid väikesed tüdrukud üle kogu maailma unistavad saada maailmakuulsaks superstaariks. Teinekord on jällegi vanemad need, kes proovivad oma last sellele kuldsele teele suunata. Palgatakse kallis koduõpetaja, laps pannakse õppima soliidse ajalooga muusikakooli, saadetakse tantsutundidesse ja peetakse talle motiveerivaid loenguid.
 
-Õnneks olid väikese Edisoni vanemad väga lapseliku suhtumisega. Õpetaja jutu peale otsustas Thomase ema Nancy, et hakkab oma poega edaspidi hoopis kodus õpetama. Poiss oli selleks ajaks koolis käinud kõigest kolm kuud. Vanemad olid väga pühendunud tema arendamisele. Nad ei sundinud poega õppima asju, mida ta ei nautinud. Nii saigi väike Edison keskenduda ainult sellele, mis teda tõeliselt huvitas.
+Rihanna näide on teistsugune. Ta sündis 1988. aastal Kariibi mere väikesel imekaunil saarel Barbadosel. Robyn Rihanna oli pere kolmest lapsest vanim. Ta isa töõtas laohoidjana ja ema raamatupidajana. Huvitaval kombel sai ta lapsepõlves kätte ettevõtluse õppetunnid, mida tal läks vaja tulevases karmis muusikaäris. Nimelt aitas ta oma isal tänavaturul riideid müüa. See andis talle kindlasti teadmisi müügist ja sellest, kuidas turg toimib.
 
-Peagi vaimustus ta üha rohkem keemiast ja tegi kogu aeg põnevaid keemilisi eksperimente. Kümneaastaselt ehitas Thomas esimese laboratoriumi, mis paiknes Edisonide kodu keldris. Edison nautis koduõpet väga, kuna ta ei pidanud nüüd tegelema tema jaoks tüütu matemaatikaga. Kui Thomase vanemad ei oleks olnud niivõrd lapseliku suhtumisega, siis ei oleks Thomas A. Edisonist saanud kunagi maailmakuulsat leiutajat. Täiskasvanulikult teiste lastevanemate eeskujul talitades oleks väike Edison jätkanud keskmisest oluliselt andetuma kooliõpilasena, kes oleks pidanud pühenduma ainuüksi sellele, et kooli üleüldse läbida.
+Ettevõtliku loomuga Robyn leiutas veel ühe viisi, kuidas taskuraha suurendada. Ta ostis kaalukomme, pakendas need kenadesse pakenditesse ning müüs siis koolis teistele lastele kasumiga maha. Robyn Rihanna lapsepõlve mõjutas tugevalt ka tema isa alkoholi- ja umastisõltuvus ning vanemate tüliderohke abielu, mis lõppes, kui Rihanna oli 14-aastane.
 
-Tema ema tegi väga julge ja lapseliku otsuse, hakates oma andekat poega ise õpetama, julgustades teda pidevalt tegelema ainult sellega, mis poissi kõige rohkem huvitas. Tänu oma vanematele hakkas geniaalne Thomas Alva Edsion oma töösse suhtuma kui mängu. Nimoodi lapselikult mängides sai ta keskenduda oma tugevuste arendamisele ja lõi hiljem leiutised, mis on muutnud meie kõigi elu. Kes teab, võib-olla istuksime ilma lapselikkuseta tänaseni pimedas.
+Rihannale meeldis kodus endamisi laulda juba väga väikesest peale. See on Barbadose kultuuri arvestades ka üsna tavapärane. Ta oli endassetõmbunud laps ning muusika oli tema väljendusviis. Ta laulis kogu aeg - oma sugulastele, kaisukarudele, isegi patjadele - ning unistas, et ühel päeval saab ta staariks.
 
-"MA EI OLE PÄEVAGI OMA ELUS TÖÖTANUD. SEE KÕIK OLI LÕBU." Thomas Alva Edison
+Kuigi tema vokaalsed võimed ilmnesid juba varakult, polnud esimesel viieteistkümnel eluaastal laulmisel mingit laiemat väljundit. Musitseerida sai lihtsalt oma lõbuks või mõnikord näiteks sõpradega koolis esineda. Pärast oma vanemate lahutust hakkas häbelik teismeline tüdruk kodustest probleemidest eemale saamise eesmärgil üha rohkem laulmisega tegelema. 15-aastasena moodustas ta klassiõdedega kolmeliikmelise tüdrukuteansambli.
+
+Ühel heal päeval veetis saarel oma puhkust New Yorgis töötav muusikaprodutsent Evan Rogers. Kuna Rogersi abikaasa Jackie on Barbadoselt pärit, siis on ta saarel üsna sage külaline. "Ma olen alati seal ja inimesed teavad, et ma olen muusikaprodutsent ja laulukirjutaja, niisis igaüks teab kedagi, kes tahab mulle oma esinemist näidata," ütleb ta. Nii juhtus ka seekord, 2004. aastal.
+
+Ühiste tuttavate kaudu sai kokku lepitud Rihanna ja ta sõbrannade esinemine. "Üks neist oli Robyn Fenty ja ta paistis teiste seast silma," meenutab Rogers saatuslikku kohtumist, "hetkest, kui ta saali astus, koondus kogu tähelepanu temale." Muusikaprodutsent Evan Rogers palus Rihannal järgmisel päeval ilma sõbrannadeta tagasi tulla ning kutsus teda koos emaga elama enda juurde Stamfordi Ameerikasse, kavatsusega teha temast staar.
+
+Hoolimata Rihanna palvetest oli ta ema algul vastu. Rihanna ema leebus alles hiljem, kui sai teada, et Evani naine on Barbadoselt pärit. Vähem kui aasta hiljem koliski vaid 16-aastane Rihanna Evan Rogersi ja tema naise juurde Connecticuti ning hakkas oma demoalbumiga tööle.
+
+"Kui ma lahkusin Barbadoselt, siis ma ei vaadanud tagasi," meenutab Rihanna. "Ma tahtsin teha, mida ma pidin tegema, isegi kui see tähendaks Ameerikasse kolimist." Evanist ja Jackiest said ujedale Rihannale justkui teised vanemad. Koos äripartner Carl Sturkeniga lindistas Evan Rihanna esimese demo ning edasine on juba ajalugu - Rihannast sai rahvusvaheline R&B megastaar.
+
+Kui Rihanna oli veel tundmatu tüdruk väikeselt ja vaeselt Barbadose saarelt, siis ei keskendunud ta sellele, et ta kodune elu on halb, vaid otsis innukalt, mida ta saaks teha. Samuti ei teinud ta suuri plane ega kulutanud kogu aega unistamisele voi planeerimisele. Ta elas lapselikult hetkes ja keskendus laulmisele. Ta ei laulnud selleks, et keegi soovitas tal seda teha, või et sellega ilmtingimata midagi saavutada. Eelkõige laulis ta seetõttu, et ta lihtsalt nautis seda üle kõige maailmas.
+
+Nagu ta ise ütleb: "Kui sa mõistad, kellele sa elad ja kellele on oluline meele järele olla, siis paljud inimesed tegelikult alustavad elamist. Ma ei kavatse kunagi sellesse takerduda. Ma vaatan tagasi oma elule ja ütlen, et ma nautisin seda - ja elasin iseendale."
+
+"MA OOTAN TÕELISE PÕNEVUSEGA, MIDA ELU MULLE TOOB." Robyn Rihanna Fenty
