--- a/books/ära-kasva-suureks/14.ee.md
+++ b/books/ära-kasva-suureks/14.ee.md
@@ -1,14 +1,14 @@
-## LUGU LAPSELIKULT LÕBUTSEMISEST
-## John Lennon
+## LUGU LAPSELIKUST LIHTSUSEST
+## Mark Twain
 
-The Beatles on popmuusika ajaloos kõige edukam bänd, kaubanduslikus mõttes. John Lennon oli biitlite asutajaliige, ülimalt edukas ning produktiivne laulja ning laulukirjutaja. Selle kõrval tundub üsna kummaline fakt, et John oli väga kirglik Monopoly mängija. Võib isegi väita, et ta oli Monopoly mängimisest sõltuvuses. Alati kui biitlid ringi reisisid, veendus John, et ta mängukomplekt oleks kaasas, et seda siis lennukites ja hotellides mängida. Tema lemmikkrundid olid Boardwalk ja Park Place. Kuni need kaks krunti olid tema valduses, ei hoolinud ta ka mängu kaotamisest.
+Legendaarse Ameerika kirjaniku Mark Twaini pärisnimi oli Samuel Langhorne Clemens. Lugu, kuidas ta endale kirjanikunimeks Mark Twain võttis, on üsna iseäralik.
 
-Kord lendas väike grupp inglise ja ameerika ajakirjanikke biitlitega kaasa nende 1964. aasta P õhja-Ameerika tuurile. Teiste seas oli ka 35-aastane Art Schreiber, Group W vanemkorrespondent, kelle tavapäraseks valdkonnaks olid poliitika ja riigi siseasjad. Schreiber nuputas, kuidas leida pidepunkte tema jaoks niivõrd võõra temaatikaga ja leida biitlitega ühine keel. Põgusalt vesteldes juhtus ta Johnile mainima, et mängis hiljuti Monopolyt. Selle peale sulas Johni lakooniline külm ilme koolipoisilikuks entusiasmiks. "Mul on see pardal!" ütles ta.
+Clemens kasvas üles Mississippi jõe ääres asuvas Hannibali linnas ning unistas lapsest saati jõeaurulaevakapteniks saamisest. 21-aastaselt viis ta enda lapsepõlve unistuse ellu, asudes õppima aurulaeva juhtimist Mississippi jõel. Kaks aastat hiljem asus ta litsentseeritud aurikujuhina alaliselt tööle.
 
-Schreiber meenutab, et sellest hetkest alates mängisid nad pidevalt Monopolyt. Vahetevahel kestis mäng nii hilise tunnini, et ta jäi juba magama. John Lennon aga müksas teda ja ütles: "Art, tule, sinu käik on." Mõnikord ühines nendega ka biitlite kitarrist George Harrison. Schreiberi sõnutsi poetas George mängu jooksul vaevu mõne sõna, samas John oli alati väga mängus sees ja erutatud.
+Ta armastas oma tööd - see oli huvitav, hästi tasustatud ja kõrge sotsiaalse staatusega amet. Auriku juhtimine oli vastutusrikas töö, kuna pidevalt tuli vältida madalikke. Selleks et aurik saaks ohutult navigeerida, pidi jõe sügavus olema vähemalt 12 jalga. Kuna üks süld on ligikaudu 6 jalga, siis oli meeskonnaliikmetel kombeks sügavust mõõtes hõigata kas "mark one" (märk üks), ehk siis üks süld, voi "mark twain" (märk kaks), ehk kaks sülda, mis tähistas ohutut sügavust 12 jalga. "Twain" on numbri "two" (kaks) vanamoodne nimetus.
 
-Lennoni arvates sarnanes muusikaäri Monopoly mänguga. Ühes Hit Paraderile 1969. aastal antud intervjuus ütleb ta: "See on nagu Monopoly, kõikide nende pankuritega - ja seda mängitakse ümber suure laua kõikide nende suurte kaladega. Sa tead tüki väärtust... Siis ma annan sulle The Strandi või Old Kent Roadi" ja sina ütled, "Ei, andke mulle kaks maja." See käib täpselt nii."
+Kahjuks jõudis ta laevajuht olla ainult kaks aastat, sest kodusõja puhkedes peatati jõeliiklus. Kuid kuna Clemensile oli töötamine jõel südamelähedane, siis võttiski ta hiljem, 27-aastasena ühte reisijuttu kirjutades esmakordselt kasutusele kirjanikunime Mark Twain. Täiskasvanulikult lähenedes peaks nimi ikka midagi loogilist ja asjalikku tähendama. Kuid Mark Twain lähtus lapselikust lihtsusest - ta lihtsalt võttis endale nime, mis oli talle südamelähedane. Kuna "mark twain" tähendab ohutut sügavust, siis kindlasti kaasnesid omal ajal jõel töötades selle terminiga südantsoojendavad positiivsed emotsioonid.
 
-John Lennon oli kindlasti lapsemeelselt lõbutsev inimene. Selle asemel et täiskasvanulikult muretseda, mängis ta hoopis Monopolyt. Ilmselt ei ole võimalik teha maailma parimat bändi, olemata sealjuures lapseliku ellusuhtumisega inimene.
+Igal juhul sai see Mississippi slängist võetud lapselik nimi veel tema eluajal üle maailma kuulsaks. Ning kes teab, võib-olla ei oleks ta kunagi nii häid raamatuid kirjutanudki, kui ta poleks võtnud endale just seda nime, mis talle nii väga meeldis.
 
-"KUI SA NAUTISID AJA RAISKAMIST, SIIS EI OLE SEE RAISATUD AEG." John Winston Lennon
+"MA POLE KUNAGI KOOLIHARIDUSEL LASKNUD SEKKUDA OMA HARITUSSE." Samuel Langhorne Clemens
