--- a/books/ära-kasva-suureks/16.ee.md
+++ b/books/ära-kasva-suureks/16.ee.md
@@ -1,14 +1,14 @@
-## LUGU LAPSELIKULT PÜHENDUMISEST
-## Neil Armstrong
+## LUGU LAPSELIKULT LÕBUTSEMISEST
+## John Lennon
 
-Kuidas kujunes nii, et just Neil Armstrongil õnnestus olla esimene inimene maailmas, kellele sai osaks au astuda Kuu pinnale? Miks just tema, aga mitte keegi teine? Vastus peitub lapselikus pühendumises.
+The Beatles on popmuusika ajaloos kõige edukam bänd, kaubanduslikus mõttes. John Lennon oli biitlite asutajaliige, ülimalt edukas ning produktiivne laulja ning laulukirjutaja. Selle kõrval tundub üsna kummaline fakt, et John oli väga kirglik Monopoly mängija. Võib isegi väita, et ta oli Monopoly mängimisest sõltuvuses. Alati kui biitlid ringi reisisid, veendus John, et ta mängukomplekt oleks kaasas, et seda siis lennukites ja hotellides mängida. Tema lemmikkrundid olid Boardwalk ja Park Place. Kuni need kaks krunti olid tema valduses, ei hoolinud ta ka mängu kaotamisest.
 
-Juba väga varases eas oli Armstrong lummatud lendamisest. Ta mängis kolmeaastaselt mängulennukitega ja läks oma esimesele lennusõidule viie- või kuueaastasena. Kaheksa- või üheksa-aastasena ehitas ta balsapuust mudellennukeid. 15-aastasena oli ta apteegis tötades jõudnud koguda piisavalt raha, et hakata kodulähedases Wapakoneta lennujaamas Ohios lennutunde võtma.
+Kord lendas väike grupp inglise ja ameerika ajakirjanikke biitlitega kaasa nende 1964. aasta P õhja-Ameerika tuurile. Teiste seas oli ka 35-aastane Art Schreiber, Group W vanemkorrespondent, kelle tavapäraseks valdkonnaks olid poliitika ja riigi siseasjad. Schreiber nuputas, kuidas leida pidepunkte tema jaoks niivõrd võõra temaatikaga ja leida biitlitega ühine keel. Põgusalt vesteldes juhtus ta Johnile mainima, et mängis hiljuti Monopolyt. Selle peale sulas Johni lakooniline külm ilme koolipoisilikuks entusiasmiks. "Mul on see pardal!" ütles ta.
 
-16-aastasena algas tema karjäär omalaadse katselendurina. Ta lendas väikelennukitega, mille mootoritele oli kohalik mehaanik äsja teinud kapitaalhoolduse. Armstrong sai nõnda endale lennutunde koguda. Pärast katselendurina töötamist oli Armstrong sõjas hävituslendur ning seejärel littus NACA-ga, millest hiljem sai NASA kosmoseagentuur. 1969. aastaks oli 38-aastane Neil Armstrong oma kirele järgnedes jõudnud lennata rohkem kui 200 eri tüüpi lennumasinaga, sealhulgas erinevate puri-, propeller- ja reaktiivlennukitega, hävitajate, helikopterite ning kosmoserakettidega.
+Schreiber meenutab, et sellest hetkest alates mängisid nad pidevalt Monopolyt. Vahetevahel kestis mäng nii hilise tunnini, et ta jäi juba magama. John Lennon aga müksas teda ja ütles: "Art, tule, sinu käik on." Mõnikord ühines nendega ka biitlite kitarrist George Harrison. Schreiberi sõnutsi poetas George mängu jooksul vaevu mõne sõna, samas John oli alati väga mängus sees ja erutatud.
 
-Armstrong töötas piloodina ning lisaks veel ka kosmoseinsenerina. Võttes arvesse tema suurt lennutundide arvu ja jäägitut pühendumist, oli ta 1969. aastal NASA jaoks igati loogiline ning parim valik, juhtimaks lendu Kuule. Sellest missionist sai tema karjääri loomulik jätk ja kulminatsioon, samas ka suurim proovilepanek elu jooksul, sest kui Apollo 11 meeskond alustas maandumist Kuule, selgus ootamatult, et arvuti ei suuda maandumist ellu viia.
+Lennoni arvates sarnanes muusikaäri Monopoly mänguga. Ühes Hit Paraderile 1969. aastal antud intervjuus ütleb ta: "See on nagu Monopoly, kõikide nende pankuritega - ja seda mängitakse ümber suure laua kõikide nende suurte kaladega. Sa tead tüki väärtust... Siis ma annan sulle The Strandi või Old Kent Roadi" ja sina ütled, "Ei, andke mulle kaks maja." See käib täpselt nii."
 
-Armstrong rakendas kõik oma elu jooksul talletatud varasemad kogemused ja maandas kosmoselaeva Eagle Kuu pinnale. Esimese inimesena Kuule astumine oli krooniks kogu tema senisele karjäärile. Suur au sai talle osaks ainult seetõttu, et ta juba 3-aastasena pühendus lapselikult jäägitult oma kirele, lendamisele. Sel ajal kui teised said täiskasvanuks, läksid ülikooli ja hankisid endale kontoritöö, keskendus Armstrong endiselt oma elus sellele, mida ta kõige enam armastas. Lapselikult ühele asjale pühendumine viis selleni, et ta muutis maailma ajalugu.
+John Lennon oli kindlasti lapsemeelselt lõbutsev inimene. Selle asemel et täiskasvanulikult muretseda, mängis ta hoopis Monopolyt. Ilmselt ei ole võimalik teha maailma parimat bändi, olemata sealjuures lapseliku ellusuhtumisega inimene.
 
-"PILOODID EI TUNNE KÕNDIMISEST ERILIST RÕÕMU. PILOOTIDELE MEELDIB LENDAMINE." Neil Alden Armstrong
+"KUI SA NAUTISID AJA RAISKAMIST, SIIS EI OLE SEE RAISATUD AEG." John Winston Lennon
